*fixed some Syncing errors *switched to xml as local storage